Completed Lab test 2

--- a/app/src/main/res/layout/activity_product_entry.xml
+++ b/app/src/main/res/layout/activity_product_entry.xml
@@ -103,6 +103,7 @@
 
             <TextView
                 android:id="@+id/saveProductTV"
+                android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
