--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -16,14 +16,14 @@
         android:layout_marginBottom="10dp"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Products List"
-            android:textSize="36dp"
-            android:layout_gravity="center"
-            android:layout_margin="30dp"
-            android:textStyle="bold"/>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Products List"-->
+<!--            android:textSize="20dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="30dp"-->
+<!--            android:textStyle="bold"/>-->
 
         <LinearLayout
             android:id="@+id/productLinearLayout"
